Mobile/audio/canvas fixes

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
   const canvas = document.getElementById('game');
   const ctx = canvas.getContext('2d');
 
+  // --- Drag flags must exist BEFORE any resize handlers can fire ---
+  let pointerActive = false;
+  let targetX = null;
+  let activePointerId = null;
+
   // Accurate canvas sizing (accounts for iOS UI changes)
   function resizeCanvasAccurate(){
     const dpr = Math.max(1, Math.min(2, window.devicePixelRatio || 1));
@@ -114,9 +119,9 @@
     ctx.setTransform(dpr, 0, 0, dpr, 0, 0); // draw in CSS pixels
   }
 
-  // While holding, avoid resizing to prevent drift
+  // While holding, avoid resizing to prevent drift (defensive if early)
   function safeResize() {
-    if (pointerActive) return;
+    if (typeof pointerActive !== 'undefined' && pointerActive) return;
     resizeCanvasAccurate();
   }
 
@@ -165,10 +170,6 @@
   window.addEventListener('keyup', (e) => keys.delete(e.code));
 
   // --- Direct, stable drag on canvas (pointer events + capture) ---
-  let pointerActive = false;
-  let targetX = null;
-  let activePointerId = null;
-
   function canvasXFromClient(clientX) {
     const rect = canvas.getBoundingClientRect();
     return clientX - rect.left;
@@ -190,7 +191,6 @@
   }, { passive: false });
 
   function endPointer() {
-    // release capture first using stored id, then reset
     try { if (activePointerId != null) canvas.releasePointerCapture?.(activePointerId); } catch {}
     pointerActive = false;
     activePointerId = null;
@@ -249,8 +249,7 @@
     } catch {}
     try {
       const a = new Audio();
-      // 1-frame silent sound to prime HTMLAudio pipeline
-      a.src = 'data:audio/mp3;base64,//uQZAAAAAAAAAAAAAAAAAAAA';
+      a.src = 'data:audio/mp3;base64,//uQZAAAAAAAAAAAAAAAAAAAA'; // tiny silent blip
       a.play().catch(()=>{});
     } catch {}
     window.removeEventListener('touchend', unlockAudioOnce);
